// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballFixturesTicker with flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX bUDcbI"
  />
  <div
    class="sc-bwzfXH eLGWmp"
    height="100"
  >
    Placeholder
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker with flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX bUDcbI"
  >
    <div>
      Widget
    </div>
  </div>
</DocumentFragment>
`;
